--- a/index.html
+++ b/index.html
@@ -1,137 +1,127 @@
 <!DOCTYPE html>
-<html>
+<!-- saved from url=(0054)http://foundation.zurb.com/templates/banner-theme.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>LearningCurve</title>
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LearningCurve</title>
-
-    <link rel="icon" type="image/ico" href="img/favicon.ico">
-    <link rel="stylesheet" href="foundation/css/foundation.css">
-    <script src="foundation/js/vendor/modernizr.js"></script>
-    <script src="foundation/js/vendor/jquery.js"></script>
-    <script src="foundation/js/foundation/foundation.js"></script>
-    <script src="foundation/js/foundation/foundation.topbar.js"></script>
-    <script>
+ <link rel="icon" type="image/ico" href="img/favicon.ico">
+ <link rel="stylesheet" href="foundation/css/foundation.css">
+<script src="foundation/js/vendor/modernizr.js"></script>
+<script src="foundation/js/vendor/jquery.js"></script>
+  <script src="foundation/js/foundation/foundation.js"></script>
+  <script src="foundation/js/foundation/foundation.topbar.js"></script>
+  <script>
     $(document).foundation();
-    </script>
-    <link rel="stylesheet" href="css/app.css">
+  </script>
+<link rel="stylesheet" href="css/app.css">
 </head>
 
 
 
 <body>
-    <div class="gradientfiller"></div>
-    <section class="top">
-        <video autoplay loop poster="img/poster.png" id="bgvid">
-            <source src="img/background.mp4" type="video/mp4">
-        </video>
-        <div class="row">
-            <div class="large-12 columns">
-                <div class="main-wrapper">
-                    <div class='img'>
-                        <p>
-                            <img src='img/logo.png' alt='LearningCurve'>
-                        </p>
-                    </div>
-                    <h3>Helping students achieve <i class='i'>more.</i></h3>
-                    <div class="row">
+<div class="gradientfiller"></div>
+<section class="top">
+  <video autoplay loop poster="img/poster.png" id="bgvid">
+<source src="img/background.mp4" type="video/mp4">
+</video>
+<div class="row">
+<div class="large-12 columns">
+<div class="main-wrapper">
+  <div class ='img'>
+    <p>
+<img src='img/logo.png' alt='LearningCurve'>
+    </p>
+  </div>
+<h3>Helping students achieve <i class='i'>more.</i></h3>
+<div class="row">
 
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
 
-    <div class="contain-to-grid sticky" style="z-index:2">
+<div class="contain-to-grid sticky" style="z-index:2">
 
-        <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large" style="z-index:2">
-            <ul class="title-area">
-                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                <li class="toggle-topbar menu-icon"><a href="#"><span></span></a>
-                </li>
-                <img src="img/logoIcon.png" style="height:45px; padding-bottom:2px">
-            </ul>
+<nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large" style="z-index:2">
+  <ul class="title-area">
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+    <img src="img/logoIcon.png" style="height:45px; padding-bottom:2px"> 
+  </ul>
 
-            <section class="top-bar-section" style="z-index:1; width:100%; display: block; width: 100%">
+  <section class="top-bar-section" style="z-index:1; width:100%; display: block; width: 100%">
 
-                <ul class="" style="">
+    <ul class="" style="">
 
-                    <li class="has-dropdown top-bar-button"><a href="#" id="button-text">AP CURRICULUMS</a>
-                        <ul class="dropdown">
-                            <li><a style="font-size: 18px" id="FiraSansOT" href="calc-bc/calcindex.html">Calculus AB</a>
-                            </li>
-                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Calculus BC</a>
-                            </li>
-                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Statistics</a>
-                            </li>
-                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Biology</a>
-                            </li>
-                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Chemistry</a>
-                            </li>
-                            <li><a style="font-size: 18px" id="FiraSansOT" href="">US History</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="top-bar-button"><a href="tutoring.html" id="button-text">FIND A TUTOR</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="top-bar-button"><a href="contact-us.html" id="button-text">CONTACT US</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="top-bar-button"><a href="become-a-tutor.html" id="button-text">BECOME A TUTOR</a>
-                    </li>
-                </ul>
-            </section>
-        </nav>
-    </div>
-    <section class="" style="position: block">
-        <div class="row">
-            <div class="large-12 columns about-box">
-                <div class="black-box">
-                    <p style="text-align:center; font-weight:normal; color:white">We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.</p>
-                    <p style="text-align:center; font-weight:normal; color:white">Interested in what we offer? Scroll down to learn more about us and our story.</p>
-                    <span class="scrolldown">Scroll down to learn more</span>
-                    <img src="img/arrow.png" width="76" height="39" alt="" class="arrow">
-                </div>
-            </div>
-    </section>
+      <li class="has-dropdown top-bar-button"><a href="#" id="button-text">AP CURRICULUMS</a>
+        <ul class="dropdown">
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Calculus AB</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Calculus BC</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Statistics</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Biology</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Chemistry</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">US History</a></li>
+        </ul>
+      </li>
+      <li class="divider"></li>
+      <li class="top-bar-button"><a href="tutoring.html" id="button-text">FIND A TUTOR</a></li>
+      <li class="divider"></li>
+      <li class="top-bar-button"><a href="contact-us.html" id="button-text">CONTACT US</a></li>
+      <li class="divider"></li>
+      <li class="top-bar-button"><a href="become-a-tutor.html" id="button-text">BECOME A TUTOR</a></li>
+    </ul>
+  </section>
+</nav>
+</div>
+<section class="" style="position: block">
+<div class="row">
+<div class="large-12 columns about-box">
+<div class="black-box">
+<h3 style="font-family:Maven3; font-size: 42px">WHAT WE DO.</h3>
+<p style="text-align:center; font-weight:normal; color:white">We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.</p>
+<p style="text-align:center; font-weight:normal; color:white">Interested in what we offer? Scroll down to learn more about us and our story.</p>
+<span class="scrolldown">Scroll down to learn more</span>
+<img src="img/arrow.png" width="76" height="39" alt="" class="arrow">
+</div>
+</div>
+</section>
 
-    <section class="content" style="z-index:0; position: block; background-color:rgb(228, 241, 254)">
-        <div class="row">
-            <div class="large-12 columns" class="about-us">
-                <h3 id="maven" style="color:black; font-size:42px; text-transform:uppercase; align:center">Who Are We?</h3>
-                <p><i>LearningCurve was founded by Omar Alhait, a high school senior in the California Bay Area, with the original intention of providing assistance to his AP Biology class.</i>
-                </p>
-                <p>With a few months, a simple project evolved into LearningCurve as it is now, with a free one-on-one tutoring service and a variety of AP note guides. Our goal now is to amplify the original intention we started out with: providing free help that can equalize the playing field between all students so that access to valuable tutoring is not a luxury of the priviliged. We believe that socioeconomic status should not have to do with success, and so we made LearningCurve to provide help with virtually any subject to students of all backgrounds, free of charge.</p>
-                <br>
-                <h3 id="maven" style="color:black; font-size: 32px; text-transform: uppercase">Our Current Locations: </h3>
-                <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/oalhait.l6k74bnb/attribution,geocoder,share.html?access_token=pk.eyJ1Ijoib2FsaGFpdCIsImEiOiJDN1Z2Uk5jIn0.ijs0u-XBS0635OFNUssilw'></iframe>
-            </div>
-        </div>
-        <footer>
-            <div class="row">
-                <div class="large-6 columns">
-                    <span style="color:black">© Copyright LearningCurve 2015</span>
-                </div>
-                <div class="large-6 columns">
-                    <ul class="inline-list right">
-                    </ul>
-                </div>
-            </div>
-        </footer>
-    </section>
+<section class="content" style="z-index:0; position: block; background-color:rgb(228, 241, 254)">
+<div class="row">
+<div class="large-12 columns" class="about-us">
+<h3 id="maven" style="color:black; font-size:42px; text-transform:uppercase; align:center">Who Are We?</h3>
+<p><i>LearningCurve was founded by Omar Alhait, a high school senior in the California Bay Area, with the original intention of providing assistance to his AP Biology class.</i></p>
+<p>With a few months, a simple project evolved into LearningCurve as it is now, with a free one-on-one tutoring service and a variety of AP note guides. Our goal now is to amplify the original intention we started out with: providing free help that can equalize the playing field between all students so that access to valuable tutoring is not a luxury of the priviliged. We believe that socioeconomic status should not have to do with success, and so we made LearningCurve to provide help with virtually any subject to students of all backgrounds, free of charge.</p>
+<br>
+<h3 id="maven" style="color:black; font-size: 32px; text-transform: uppercase">Our Current Locations: </h3>
+<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/oalhait.l6k74bnb/attribution,geocoder,share.html?access_token=pk.eyJ1Ijoib2FsaGFpdCIsImEiOiJDN1Z2Uk5jIn0.ijs0u-XBS0635OFNUssilw'></iframe>
+</div>
+</div>
+<footer>
+<div class="row">
+<div class="large-6 columns">
+<span style="color:black">© Copyright LearningCurve 2015</span>
+</div>
+<div class="large-6 columns">
+<ul class="inline-list right">
+<li><a href="#" style="color:black">About</a></li>
+<li><a href="#" style="color:black">Terms of Use</a></li>
+<li><a href="#" style="color:black">Privacy Policy</a></li>
+</ul>
+</div>
+</div>
+</footer>
+</section>
 
 
-    <script>
-    $(document).foundation();
+<script>
+      $(document).foundation();
 
-    var doc = document.documentElement;
-    doc.setAttribute('data-useragent', navigator.userAgent);
+      var doc = document.documentElement;
+      doc.setAttribute('data-useragent', navigator.userAgent);
     </script>
 
 </body>
-
 </html>
