--- a/index.html
+++ b/index.html
@@ -1,149 +1,137 @@
 <!DOCTYPE html>
-<!-- saved from url=(0054)http://foundation.zurb.com/templates/banner-theme.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LearningCurve</title>
+<html>
 
-<!-- <link rel="stylesheet" href="foundation-5.4.6/css/foundation.css">-->
- <link rel="stylesheet" href="foundation/css/foundation.scss">
- <link rel="icon" 
-      type="image/ico" 
-      href="img/favicon.ico">
-<link rel="stylesheet" href="http://foundation.zurb.com/assets/css/templates/foundation.css">
-<link rel="stylesheet" href="http://foundation.zurb.com/assets/css/template-themes/banner-theme.css">
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<script src="foundation/js/vendor/modernizr.js"></script>
-<script src="foundation/js/vendor/jquery.js"></script>
-  <script src="foundation/js/foundation/foundation.js"></script>
-  <script src="foundation/js/foundation/foundation.topbar.js"></script>
-  <script>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LearningCurve</title>
+
+    <link rel="icon" type="image/ico" href="img/favicon.ico">
+    <link rel="stylesheet" href="foundation/css/foundation.css">
+    <script src="foundation/js/vendor/modernizr.js"></script>
+    <script src="foundation/js/vendor/jquery.js"></script>
+    <script src="foundation/js/foundation/foundation.js"></script>
+    <script src="foundation/js/foundation/foundation.topbar.js"></script>
+    <script>
     $(document).foundation();
-  </script>
-
-<script src="./Foundation Template   Banner Theme_files/modernizr.js"></script><style type="text/css"></style>
-<link rel="stylesheet" href="css/app.css">
+    </script>
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 
 
 <body>
-<!--<link href="./Foundation Template   Banner Theme_files/css" rel="stylesheet" type="text/css">-->
-<section class="herospecial">
-  <video autoplay loop poster="img/poster.jpg" id="bgvid">
-<source src="img/background.mp4" type="video/mp4">
-</video>
-<div class="row">
-<div class="large-12 columns">
-<div class="main-wrapper">
-  <div class ='img'>
-    <p>
-<img src='img/logo.png' alt='LearningCurve'>
-    </p>
-  </div>
-<h3>Helping students achieve <i class='i'>more.</i></h3>
-<div class="row">
+    <div class="gradientfiller"></div>
+    <section class="top">
+        <video autoplay loop poster="img/poster.png" id="bgvid">
+            <source src="img/background.mp4" type="video/mp4">
+        </video>
+        <div class="row">
+            <div class="large-12 columns">
+                <div class="main-wrapper">
+                    <div class='img'>
+                        <p>
+                            <img src='img/logo.png' alt='LearningCurve'>
+                        </p>
+                    </div>
+                    <h3>Helping students achieve <i class='i'>more.</i></h3>
+                    <div class="row">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <div class="contain-to-grid sticky" style="z-index:2">
+
+        <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large" style="z-index:2">
+            <ul class="title-area">
+                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                <li class="toggle-topbar menu-icon"><a href="#"><span></span></a>
+                </li>
+                <img src="img/logoIcon.png" style="height:45px; padding-bottom:2px">
+            </ul>
+
+            <section class="top-bar-section" style="z-index:1; width:100%; display: block; width: 100%">
+
+                <ul class="" style="">
+
+                    <li class="has-dropdown top-bar-button"><a href="#" id="button-text">AP CURRICULUMS</a>
+                        <ul class="dropdown">
+                            <li><a style="font-size: 18px" id="FiraSansOT" href="calc-bc/calcindex.html">Calculus AB</a>
+                            </li>
+                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Calculus BC</a>
+                            </li>
+                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Statistics</a>
+                            </li>
+                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Biology</a>
+                            </li>
+                            <li><a style="font-size: 18px" id="FiraSansOT" href="">Chemistry</a>
+                            </li>
+                            <li><a style="font-size: 18px" id="FiraSansOT" href="">US History</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="divider"></li>
+                    <li class="top-bar-button"><a href="tutoring.html" id="button-text">FIND A TUTOR</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li class="top-bar-button"><a href="contact-us.html" id="button-text">CONTACT US</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li class="top-bar-button"><a href="become-a-tutor.html" id="button-text">BECOME A TUTOR</a>
+                    </li>
+                </ul>
+            </section>
+        </nav>
+    </div>
+    <section class="" style="position: block">
+        <div class="row">
+            <div class="large-12 columns about-box">
+                <div class="black-box">
+                    <p style="text-align:center; font-weight:normal; color:white">We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.</p>
+                    <p style="text-align:center; font-weight:normal; color:white">Interested in what we offer? Scroll down to learn more about us and our story.</p>
+                    <span class="scrolldown">Scroll down to learn more</span>
+                    <img src="img/arrow.png" width="76" height="39" alt="" class="arrow">
+                </div>
+            </div>
+    </section>
+
+    <section class="content" style="z-index:0; position: block; background-color:rgb(228, 241, 254)">
+        <div class="row">
+            <div class="large-12 columns" class="about-us">
+                <h3 id="maven" style="color:black; font-size:42px; text-transform:uppercase; align:center">Who Are We?</h3>
+                <p><i>LearningCurve was founded by Omar Alhait, a high school senior in the California Bay Area, with the original intention of providing assistance to his AP Biology class.</i>
+                </p>
+                <p>With a few months, a simple project evolved into LearningCurve as it is now, with a free one-on-one tutoring service and a variety of AP note guides. Our goal now is to amplify the original intention we started out with: providing free help that can equalize the playing field between all students so that access to valuable tutoring is not a luxury of the priviliged. We believe that socioeconomic status should not have to do with success, and so we made LearningCurve to provide help with virtually any subject to students of all backgrounds, free of charge.</p>
+                <br>
+                <h3 id="maven" style="color:black; font-size: 32px; text-transform: uppercase">Our Current Locations: </h3>
+                <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/oalhait.l6k74bnb/attribution,geocoder,share.html?access_token=pk.eyJ1Ijoib2FsaGFpdCIsImEiOiJDN1Z2Uk5jIn0.ijs0u-XBS0635OFNUssilw'></iframe>
+            </div>
+        </div>
+        <footer>
+            <div class="row">
+                <div class="large-6 columns">
+                    <span style="color:black">© Copyright LearningCurve 2015</span>
+                </div>
+                <div class="large-6 columns">
+                    <ul class="inline-list right">
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </section>
 
 
+    <script>
+    $(document).foundation();
 
-<div class="contain-to-grid sticky" style="z-index:2">
-
-<nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large" style="z-index:2">
-  <ul class="title-area">
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
-    <img src="img/logoIcon.png" style="height:45px; padding-bottom:2px"> 
-  </ul>
-
-  <section class="top-bar-section" style="z-index:1; width:100%; display: block; width: 100%">
-
-    <ul class="" style="">
-
-      <li class="has-dropdown top-bar-button"><a href="#" id="button-text">AP CURRICULUMS</a></li>
-      <li class="divider"></li>
-      <li class="top-bar-button"><a href="/tutoring.html" id="button-text">TUTORING</a></li>
-      <li class="divider"></li>
-      <li class="top-bar-button"><a href="#" id="button-text">CONTACT US</a></li>
-      <li class="divider"></li>
-      <li class="top-bar-button"><a href="#" id="button-text">BECOME A TUTOR</a></li>
-    </ul>
-  </section>
-</nav>
-</div>
-
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="row" >
-<div class="large-12 columns about-box">
-<div class="black-box">
-<h2 class='pink'>WHAT WE DO.</h2>
-<p id='roboto'>We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.
-</p><p id='roboto'>Interested in what we offer? Scroll down to learn more about us, and our story.</p>
-<a href="http://foundation.zurb.com/templates/banner-theme.html#" class="secondary small button">Learn More →</a>
-</div>
-</div>
-</section>
-
-
-<section class="hero-content" style="z-index:0;">
-<div class="row">
-<div class="large-12 columns" class="about-us">
-<h4>WHO ARE WE?</h4>
-<p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-<p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-<div class="large-4 columns">
-<ul class="small-block-grid-2">
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="img/john.jpg"></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="img/jigar.png"></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="./Foundation Template   Banner Theme_files/dog3.png"></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="./Foundation Template   Banner Theme_files/dog4.png"></a></li>
-</ul>
-</div>
-</div>
-
-</div>
-</section>
-<div class="row">
-<div class="large-12 columns">
-<div class="panel">
-<div class="row">
-<div class="large-9 columns">
-<h4>Get in touch!</h4>
-<p>We're open 9am - 5pm, Monday through Saturdays.</p>
-</div>
-<div class="large-3 columns">
-<a href="http://foundation.zurb.com/templates/banner-theme.html#" class="radius button right">Contact Us</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-<footer>
-<div class="row">
-<div class="large-6 columns">
-<p>© Copyright no one at all. Go to town.</p>
-</div>
-<div class="large-6 columns">
-<ul class="inline-list right">
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#">About</a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#">Terms of Use</a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#">Privacy Policy</a></li>
-</ul>
-</div>
-</div>
-</footer>
-<script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-</script><script src="./Foundation Template   Banner Theme_files/zepto.js"></script>
-<script>
-      $(document).foundation();
-
-      var doc = document.documentElement;
-      doc.setAttribute('data-useragent', navigator.userAgent);
+    var doc = document.documentElement;
+    doc.setAttribute('data-useragent', navigator.userAgent);
     </script>
 
-<div onclick="javascript:((function(c){(c.demoboPortal&amp;&amp;c.demoboPortal.set(&quot;mode&quot;,&quot;EXTENSION&quot;));c._extension=1;var d=window.__dmtg;((!c.demoboPortal&amp;&amp;function(){var a=new Date,b=c.document.createElement(&quot;script&quot;),e=&quot;//d1hew6xzj9n4kw.cloudfront.net&quot;;window.demoboBase=e;b.src=&quot;//d32q09dnclw46p.cloudfront.net/entry.js?&quot;+a.getTime();b.className=&quot;demoboJS&quot;;c.document.body&amp;&amp;c.document.body.appendChild(b)})||d)()})(window))" id="toggle"></div><div id="load" onclick="javascript:(function(c){(c.demoboPortal&amp;&amp;c.demoboPortal.set(&quot;mode&quot;,&quot;EXTENSION&quot;));!c.demoboPortal&amp;&amp;(function(){c._extension=1;var a=new Date,b=c.document.createElement(&quot;script&quot;),e=&quot;//d1hew6xzj9n4kw.cloudfront.net&quot;;window.demoboBase=e;b.src=&quot;//d32q09dnclw46p.cloudfront.net/entry.js?&quot;+a.getTime();b.className=&quot;demoboJS&quot;;c.document.body&amp;&amp;c.document.body.appendChild(b)}());})(window)"></div><iframe width="0" height="0" frameborder="0" src="about:blank" id="GINGER_SOFTWARE_bubblesIFrame" scrolling="no" style="border: 0px solid; display: none; position: absolute; z-index: 2147483647; height: 0px; width: 0px; background-color: transparent;"></iframe><div id="GingerWidgetInfo" style="display:none;">{"version":"0.1.0.525","isExtension":true,"extensionName":"Chrome"}</div></body></html>
+</body>
+
+</html>
